# codepraise-clone-notifier-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Pipfile  README.md  docker-compose.yml  heroku.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml
application/: clone_notifier.py
application/representers/: clone_request_representer.py
config/: .gitignore  config.py
config/secrets/dev/: REPORT_QUEUE.example
config/secrets/prod/: AWS_SECRET_ACCESS_KEY.example  SLACK_WEBHOOK_URL.example
docker/: index.html
docs/: docker.md  index.md  invoke.md  prerequisite.md
infrastructure/messaging/: queue.py
invoke/: index.html
prerequisite/: index.html
search/: search_index.json
tasks/: __init__.py  console.py  docker.py  quality.py  worker.py
worker/application/: clone_notifier.py
worker/application/representers/: collaborator_representer.py
worker/representers/: __init__.py  repo_representer.py
