[tool.poetry]
name = "codepraise-clone-notifier-python"
version = "0.1.0"
description = ""
authors = ["as10896"]
readme = "README.md"
packages = [{include = "worker"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.26"
pydantic = "^1.9.1"
invoke = "^1.7.1"
requests = "^2.28.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
flake8 = "^4.0.1"
radon = "^5.1.0"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
